# Autodeployment-Chat-System

./: .env.example  Cargo.toml  LICENSE  README.md  demo.sh  test_terraform.sh
autodeployment-system/: .gitignore  README.md
autodeployment-system/src/: ai_nlp.rs  credentials.rs  deployment.rs  infrastructure.rs  main.rs  repository.rs
src/: main.rs  nlp.rs
