[package]
name = "autodeployment-system"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["derive"] }
tokio = { version = "1.21", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
git2 = "0.15"
walkdir = "2.3"
regex = "1.5"
log = "0.4"
env_logger = "0.9"
tempfile = "3.3"
which = "4.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
dotenv = "0.15"
